src/test/contracts/negative/linearity_record_pattern_let_in.mligo
type foofoo = {foo : int; bar : int}

let x = { foo = 1 ; bar = 2 }

let y = 
    let { foo ; foo ; bar } = x in
    foo + bar